[tool.poetry]
name = "unifind"
version = "0.1.0"
description = ""
authors = ["Derek Baugh <derekb@baughcl.com>"]
readme = "README.md"
packages = [{include = "unifind", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
ipython = "^8.27.0"
fpdf2 = "^2.7.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "unifind:run"
